# insigne_dev

./: .gitignore  .gitmodules  CMakeLists.txt  _build_prj_clang_android_arm64.bat  _build_prj_clang_release.bat  _compile_apk_arm64.bat  _gen_prj_clang_android_arm64.bat  _gen_prj_clang_release.bat  _install_apk_arm64.bat  gen_parser.bat  gen_prj_clang.bat  project_configs.cmake  project_configurator.lua  readme.md
data/: imgui.ini  profiling_7_9_16_38_59.csv  profiling_7_9_16_40_58.csv  profiling_7_9_16_51_46.csv
data/commons/: text2d.fs  text2d.mat  text2d.vs  text3d.mat  text3d.vs
data/gfx/mat/: 2_shdebug.mat  3_shdebug.mat  debug_render.mat  depth_render.mat  gray_solid.mat  green_solid.mat  pbr.mat  pbr_solid_fill.mat  pbr_splitsum.mat  red_solid.mat  ref_shdebug.mat  shdebug.mat  texture_streaming.mat  uv_solid.mat  white_emissive.mat
data/gfx/shader/: pbr.fs  pbr.vs  solid.fs  solid.vs  texture_streaming.fs  uv.fs  uv.vs
data/gfx/shd/: debug_render.shd  depth_render.shd  emissive.shd  pbr_cook_torrance.shd  pbr_solid.shd  shdebug.shd  test_shader.shd
data/shaders/internal/: debug_render.frag  debug_render.vert  debugui.frag  debugui.vert  fallback.frag  fallback.vert  shdebug.frag  shdebug.vert  ssquad.frag  test_shader.frag  test_shader.vert
data/shaders/lighting/: depth_render.frag  depth_render.vert  emissive.frag  emissive.vert  lighting.frag  lighting.vert  pbr_ashikhmin.frag  pbr_ashikhmin.vert  pbr_cook_torrance.frag  pbr_cook_torrance.vert  pbr_cook_torrance_notex.frag  pbr_cook_torrance_notex.vert  skybox.frag  skybox.vert
src/: Application.cpp  Application.h  DemoHub.cpp  DemoHub.h  IDemoHub.h  InsigneImGui.cpp  InsigneImGui.h  InsigneImGui.hpp  main.cpp
src/FastMath/: SIMDSamples.cpp  SIMDSamples.h
src/Graphics/: CBFormats.h  CBObjDefinitions.h  CBObjLoader.h  CBObjLoader.inl  CBObjectFormats.h  CBRenderDescs.h  CBTexDefinitions.h  CBTextureFormats.h  Camera.h  CbModelLoader.h  CbModelLoader.inl  CbSceneLoader.h  CbSceneLoader.inl  DebugDrawer.cpp  DebugDrawer.h  DebugDrawer.hpp  DebugRenderer.cpp  DebugRenderer.h  FBODebugMaterial.cpp  FBODebugMaterial.h  FontRenderer.cpp  FontRenderer.h  FreeCamera.cpp  FreeCamera.h  GLTFLoader.h  GLTFLoader.inl  GeometryBuilder.cpp  GeometryBuilder.h  GeometryBuilder.hpp  ICameraMotion.h  IDebugRenderer.h  IDebugUI.cpp  IDebugUI.h  ILightingManager.h  IMaterial.h  IMaterialManager.h  IModelManager.h  IPostFXManager.h  IProbesBaker.h  IShader.h  (+71 more)
src/Graphics/ImGui/: ImGuiDemoWindow.cpp  ImGuiDemoWindow.h  ValuePlotter.cpp  ValuePlotter.h
src/Graphics/Misc/: CameraWork.cpp  CameraWork.h  Font.cpp  Font.h  GLTFLoader.cpp  GLTFLoader.h  GameOfLife.cpp  GameOfLife.h
src/Graphics/Performance/: Blending.cpp  Blending.h  CubeMap.cpp  CubeMap.h  Empty.cpp  Empty.h  GammaCorrection.cpp  GammaCorrection.h  GeometryVault.cpp  GeometryVault.h  ImGuiCustomWidgets.cpp  ImGuiCustomWidgets.h  LuaScripting.cpp  LuaScripting.h  Matrices.cpp  Matrices.h  PostFX.cpp  PostFX.h  SIMD.cpp  SIMD.h  SceneLoader.cpp  SceneLoader.h  ShaderVault.cpp  ShaderVault.h  TextureStreaming.cpp  TextureStreaming.h  Textures.cpp  Textures.h  Triangle.cpp  Triangle.h  Vault.cpp  Vault.h
src/Graphics/RenderTech/: FormFactorGI.cpp  FragmentPartition.cpp  FragmentPartition.h  FragmentPartitionShaders.inl  FrameBuffer.cpp  FrameBuffer.h  HDRBloom.cpp  HDRBloom.h  LightProbeGI.cpp  LightProbeGI.h  LightProbeGIShaders.inl  PBR.cpp  PBR.h  PBRHelmet.cpp  PBRHelmet.h  PBRShaders.inl  PBRWithIBL.cpp  PBRWithIBL.h  SHCalculator.cpp  SHCalculator.h  SHCalculatorShaders.inl  SHProbeBaker.cpp  SHProbeBaker.h  SHProbeBaker.inl  Sky.cpp  Sky.h  SkyRuntime.cpp  SkyRuntime.h  ToneMapHDR.cpp  precomputed_sky.cpp  precomputed_sky.h
src/Graphics/Tests/: AccurateFormFactor.cpp  AccurateFormFactor.h  CbFormats.cpp  CbFormats.h  CornelBox.cpp  CornelBox.h  CubeMapTexture.cpp  CubeMapTexture.h  DebugUITest.cpp  DebugUITest.h  FormFactorsBaking.cpp  FormFactorsBaking.h  FormFactorsValidating.cpp  FormFactorsValidating.h  GILightProbe.cpp  GILightProbe.h  GIShader.cpp  GIShader.h  GPUQuad2DRasterize.cpp  GPUQuad2DRasterize.h  GPUVectorMath.cpp  GPUVectorMath.h  GlobalIllumination.cpp  GlobalIllumination.cpp.bak  GlobalIllumination.h  GlobalIllumination.h.bak  ITestSuite.h  InterreflectPRT.cpp  InterreflectPRT.h  LightProbePlacement.cpp  LightProbePlacement.h  OctreePartition.cpp  OctreePartition.h  OmniShadow.cpp  OmniShadow.h  PlainQuad.cpp  PlainQuad.h  PlainTextureQuad.cpp  PlainTextureQuad.h  Quad2DRasterize.cpp  (+19 more)
src/Graphics/Tools/: FormFactorUtils.cpp  FormFactorUtils.h  Noise.cpp  Noise.h  SHCalculator.cpp  SHCalculator.h  Samplers.cpp  Samplers.h  SceneFormFactor.cpp  SingleAccurateFormFactor.cpp  SingleAccurateFormFactor.h  SurfaceFormFactor.cpp  SurfelsGenerator.cpp  SurfelsGenerator.h
src/ImGuiDebug/: DebugUIMaterial.cpp  DebugUIMaterial.h  Debugger.cpp  Debugger.h  GraphicsDebugger.cpp
src/Logic/: Game.cpp  Game.h
src/Memory/: MemorySystem.cpp  MemorySystem.h
src/System/: Callbacks.h  Controller.cpp  Controller.h  SubSystems.h
src/memory/: memory_system.cpp  memory_system.h
tools/cmftStudio_win64/: readme.txt
tools/modelbaker/: CMakeLists.txt  gen_parser.bat  main.cpp  pbrtv3.l  project_configs.cmake
tools/modelbaker/src/: CBObjDefinitions.h  CBObjLoader.h  CBObjLoader.inl  IReader.h  OBJModelBaker.cpp  OBJModelBaker.h  PBRTSceneDefs.h  PlyLoader.h  PlyLoader.inl  cbobj.l  cbobj.y  cbobj_lex.yy.cpp  commons.h  main.cpp  pbrtv3.l  pbrtv3.tab.cpp  pbrtv3.tab.h  pbrtv3.y  pbrtv3.yy.cpp
tools/modelbaker/src/Memory/: MemorySystem.cpp  MemorySystem.h
tools/scenebaker/: sceneBaker.py
tools/texturebaker/: CMakeLists.txt  _build_prj_clang.bat  _gen_prj_clang.bat  project_configs.cmake  readme.md
tools/texturebaker/old_src/: Baker2D.h  BakerHDR2D.cpp  CBFormats.h
tools/texturebaker/old_src/Memory/: MemorySystem.cpp  MemorySystem.h
tools/texturebaker/src/: Baker2D.cpp  Baker2D.h  BakerCube.cpp  BakerCube.h  BakerHDR2D.h  CBTexture.h  main.cpp  stb_impl.cpp
tools/texturebaker/src/Memory/: MemorySystem.cpp  MemorySystem.h
(+281 files in other folders)
